# discord-websocket-client

./: config.yaml  main.py  pyproject.toml
